<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        tools:context=".LoginActivity">
        <View
            android:id="@+id/blankSpaceTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/blankSpaceTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <View
            android:id="@+id/blankSpace"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.23"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/loginCardView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp"
            android:background="@drawable/rounded_card_background"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/blankSpace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                android:hint="@string/hint_user"
                app:hintTextColor="@color/black"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:counterMaxLength="5"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                android:layout_marginTop="@dimen/_8sdp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/errorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp"
                android:hint="@string/hint_pass"
                app:hintTextColor="@color/black"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_remember"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/helpTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="end"
                    android:text="@string/hint_help"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/errorTextViews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hint_error"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:visibility="gone" />
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_conti"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_31sdp"
                android:textSize="@dimen/_15sdp"
                android:background="@drawable/d_rounded_corner"
                />

            <LinearLayout
                android:id="@+id/bottomButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_54sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_35sdp"
                >

                <TextView
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/hint_b1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"/>

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@color/black"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_b2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center"
                    android:layout_gravity="center"

                    android:layout_marginStart="@dimen/_8sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>